[package]
name = "mlog"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
debug = false

# [profile.performance]
# inherits = "release"
# opt-level = 3
# debug = false

[features]
default = []
performance = []